Main LaPalletteDuGout + correction firefox color

--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,7 @@ header {
   justify-content: center;
   align-items: center;
   box-shadow: 0px 1px 5px rgba(0,0,0,0.3);
+  background-color: white;
 }
 
 header img {
